tests/interpreter/errors/dataset_skip_non_int.mochi
let xs = [1,2,3]
let result = from x in xs skip "two" select x
print(result)
